[package]
name = "nodejs-launcher"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A lightweight launch configurations CLI for NodeJS apps"
readme = "README.md"
homepage = "https://github.com/ostaplisovyj/nodejs-launcher"
repository = "https://github.com/ostaplisovyj/nodejs-launcher"
keywords = ["cli", "debug", "nodejs"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
dialoguer = "0.10.0"
console = "0.15.0"
